--- a/package.json
+++ b/package.json
@@ -50,5 +50,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/universal-cookie": "^3.0.0",
+    "universal-cookie": "^4.0.4"
   }
 }
