--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
     "react-slick": "^0.29.0",
+    "react-webcam": "^7.0.1",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.4.2",
