--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26",
     "cross-env": "^7.0.3",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "firebase": "^9.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-firebaseui": "^6.0.0",
     "react-icons": "^4.7.1",
     "react-router-dom": "^6.5.0",
     "react-scripts": "5.0.1",
