--- a/.prettierrc
+++ b/.prettierrc
@@ -3,7 +3,7 @@
     "useTabs": false,
     "endOfLine": "lf",
     "arrowParens": "avoid",
-    "semi": true,
+    "semi": false,
     "trailingComma": "all",
     "printWidth": 80,
     "editor.formatOnType": true
